# social_im

./: .gitignore  README.en.md  README.md  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub
deepseek_integration/: README.md  __manifest__.py
deepseek_integration/controllers/: main.py
deepseek_integration/i18n/: zh_CN.po
deepseek_integration/models/: __init__.py  deepseek_api.py  deepseek_configuration.py  deepseek_request_history.py
deepseek_integration/security/: ir.model.access.csv
deepseek_integration/views/: deepseek_configuration_views.xml  deepseek_menu.xml  deepseek_request_history_views.xml
deepseek_odoo_connector/: README01.md  __manifest__.py  test_deepseek_balance.py  test_deepseek_chat.py  test_deepseek_cue.py  test_deepseek_cue_json.py  test_deepseek_cue_role.py  test_deepseek_fim.py  test_deepseek_reasoner.py
deepseek_odoo_connector/data/: deepseek_cron.xml  deepseek_data.xml
deepseek_odoo_connector/i18n/: zh_CN.po
deepseek_odoo_connector/models/: __init__.py  crm_lead.py  deepseek_balance.py  deepseek_cue_word.py  deepseek_interface.py
deepseek_odoo_connector/security/: groups.xml  (+1 more)
mcp-odoo-server/: pyproject.toml  requirements.txt
mcp-odoo-server/mcp_odoo_server/: __init__.py  main.py  odoo_client.py  tools.py
mcp-odoo-server/tests/: test_client.py
mcp_odoo_base/: README.md  __manifest__.py
oudu_douyin_oauth/: README.md  __init__.py  __manifest__.py
oudu_wechat_login/: README.md  __init__.py  __manifest__.py  session_store.py
oudu_wechat_login_qrcode/: __manifest__.py
oudu_wechat_message/: README.md  __manifest__.py
(+92 files in other folders)
